--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,22 @@ language: php
 php:
 - '7.2'
 
-install:
-- yes '' | pecl install swoole
-- composer install
+dist: trusty
+sudo: false
 
-script: ./vendor/bin/phpunit tests --repeat 10
+cache:
+  directories:
+  - ~/.composer
+  - ~/.php-ext
+
+before_install:
+- source <(curl -sL https://github.com/carno-php/travis-ci/raw/master/tests-prepare.sh)
+
+install:
+- composer update
+
+script:
+- testing
+
+after_success:
+- coveralls
